# cif2hkl

./: CFML_Cryst_Types.f90  CFML_Diffpatt.f90  CFML_EisPack.f90  CFML_Molecules.f90  CMakeLists.txt  Makefile  README.md  cif2hkl.F90
CFML/: AUTHORS  CFML_Atom_Mod.f90  CFML_Chem_Scatt.f90  CFML_Form_CIF.f90  CFML_Geom_Calc.f90  CFML_GlobalDeps_Linux.f90  CFML_Magnetic_Groups.f90  CFML_Math_3D.f90  CFML_Math_Gen.f90  CFML_Reflct_Util.f90  CFML_Sfac.f90  CFML_String_Util_gf.f90  CFML_Sym_Table.f90  CFML_Symmetry.f90
examples/: CaF2.cfl
